# feax

./: .gitignore  .pre-commit-config.yaml  .pydeps  CLAUDE.md  Dockerfile  README.md  build.sh  debug_surface_vars.py  distributed.example.yml  docker-compose.yml  docs_README.md  docs_serve.py  generate_docs.py  linear_elasticity_example.py  linear_elasticity_results.vtu  logo_generate.py  periodic_mesh.vtk  problem copy.py  pyproject.toml  pytest.ini  sample.py  setup.cfg  test_upper_adjoint.py  test_verbose_logging.py  vmapped_parameter_study.py
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-docs.yml  docs.yml
batch/: batch_solution_1.vtk  batch_solution_2.vtk  batch_solution_3.vtk
docs/: README.md  dev.sh  docusaurus.config.ts  feax.html  fix_curly_braces.py  format_examples.py  format_parameters.py  index.html  package-lock.json  package.json  pure-neumann.md  pydoc-markdown.yml  search.js  sidebars.ts
docs/.claude/: settings.local.json
docs/docs/: benchmarks.mdx  intro.md  intro.mdx  solver_internals.mdx
examples/: Batched_DirichletBC.py  batched_elasticity.py  batched_grad_example.py  batched_traction_benchmark.py  benchmark_batching.py  colab_quickstart.ipynb  cube_with_three_holes_periodic.py  distributed_linear_elasticity.py  elasticity_grad.py  elasticity_uq.py  forward_solve_benchmark.py  hyper_elasticity.py  hyper_elasticity_solve_fn.py  hyperelasticity_diffrentable.py  linear_elasticity.py  linear_elasticity_batch.py  linear_elasticity_benchmark.py  linear_elasticity_vmap_density.py  linear_elasticity_vmap_traction.py  periodic_homogenization.py  periodic_linear_elasticity.py  poisson_2d.py  pure_function_usage.py  simple_assemble.py  simple_elasticity.py  test_distributed.py  topopt.py  topopt_modopt.py  using_internal_vars.py  using_internal_vars_surfaces.py
examples/advance/: README_topology_optimization.md  anisotropic_topology_optimization.py  anisotropic_topology_optimization_3d.py  cahn_hilliard.py  cohesive_fracture.py  cohesive_fracture_2d.py  cohesive_fracture_3d.py  cohesive_fracture_3d_wavy.py  fiber_composite_homogenization.py  fiber_composite_homogenization_3d.py  high_reso_topopt.py  laser_am_thermal_mechanical.py  lattice_homogenization.py  narrowband_lattice_homogenization.py  periodic_poisson.py  quasi_isotropic_laminate.py  robust_topology_optimization_3point_bending.py  sensitivity_analysis.py  thermal_shock_fracture.py  third_medium_contact.py  third_medium_contact_3d.py  topology_optimization.py  topology_optimization_adaptive.py  topology_optimization_batched_surface_loads.py  topology_optimization_mdmm.py  topology_optimization_thermomechanical.py  topology_optimization_unitcell_thermomechanical.py
examples/archieve/: COMPLEX_LATTICE_README.md  VMAP_LATTICE_README.md  compare_elasticity.py  compare_legacy_symbolic.py  compare_loop_vs_vmap.py  hyper_elasticity.py  hyper_elasticity_solve_fn.py  linear_elasticity_batch.py  linear_elasticity_benchmark.py  periodic_homogenization_complex.py  periodic_homogenization_vmap.py  simple_assemble.py  test_homogenization_grad.py  topopt.py  topopt_modopt.py
examples/basic/: batched_bc.py  eit.py  elasticity_demo_simple.py  elasticity_demo_ui.py  elasticity_interactive_demo.ipynb  hyper_elasticity.py  hyper_elasticity_demo_ui.py  hyper_elasticity_torsion.py  investigate_root_cause.py  kernel_stokes_2d.py  laminate_thermal_warping.py  lattice_spgrid_cmg.py  linear_elasticity.py  linear_elasticity_comparison_simple.py  linear_elasticity_jit.py  linear_elasticity_vmap_density.py  linear_elasticity_vmap_traction.py  periodic_homogenization.py  periodic_linear_elasticity.py  periodic_poisson_2d.py  simple_stokes_2d.py  simple_symbolic.py  symbolic_examples.py  symbolic_with_internal_vars.py  test_jit_upper.py  (+7 more)
feax/: DCboundary.py  __init__.py  apply_bcs.py  asd.py  assembler.py  basis.py  boundary_conditions.py  csr.py  fe.py  generate_mesh.py  internal_vars.py  linear_solver.py  mesh.py  narrowband.py  problem.py  profiler.py  solution.py  solver.py  solver_option.py  solvers.py  spgrid.py  static_vars.py  traced_params.py  traced_structure.py  utils.py  utils_memory.py
output/: optimization_history.csv
output_thermomech_opt/: history.csv  optimized.stl
outputs/: batched_E_100000_59.vtu  batched_E_10000_00.vtu  batched_E_11525_01.vtu  batched_E_13051_02.vtu  batched_E_14576_03.vtu  batched_E_16102_04.vtu  batched_E_17627_05.vtu  batched_E_19153_06.vtu  batched_E_20678_07.vtu  batched_E_22203_08.vtu  batched_E_23729_09.vtu  batched_E_25254_10.vtu  batched_E_26780_11.vtu  batched_E_28305_12.vtu  batched_E_29831_13.vtu  batched_E_31356_14.vtu  batched_E_32881_15.vtu  batched_E_34407_16.vtu  batched_E_35932_17.vtu  batched_E_37458_18.vtu  batched_E_38983_19.vtu  batched_E_40508_20.vtu  batched_E_42034_21.vtu  batched_E_43559_22.vtu  batched_E_45085_23.vtu  batched_E_46610_24.vtu  batched_E_48136_25.vtu  batched_E_49661_26.vtu  batched_E_51186_27.vtu  batched_E_52712_28.vtu  batched_E_54237_29.vtu  batched_E_55763_30.vtu  batched_E_57288_31.vtu  batched_E_58814_32.vtu  batched_E_60339_33.vtu  batched_E_61864_34.vtu  batched_E_63390_35.vtu  batched_E_64915_36.vtu  batched_E_66441_37.vtu  batched_E_67966_38.vtu  (+20 more)
scripts/: colab_install_suitesparse.sh  colab_setup.sh
tests/: __init__.py  check_environment.py  conftest.py  test_api_migration.py  test_apply_bcs.py  test_asd.py  test_basis.py  test_bc_grad.py  test_bc_vmap.py  test_boundary_conditions.py  test_cmg.py  test_comparison_between_feax_vs_jaxfem.py  test_cudss.py  test_direct_vmap.py  test_eigen.py  test_elasticity.py  test_fe.py  test_gene_narrowband.py  test_generate_mesh.py  test_get_res_get_j_methods.py  test_grad.py  test_hessian_biharmonic.py  test_homogenization.py  test_internal_vars.py  test_jit.py  test_logger_setup.py  test_matrix_view.py  test_mesh.py  test_narrowband.py  test_newton_jit_vmap.py  test_newton_solver.py  test_node_cell_vars.py  test_params_bridge.py  test_poisson.py  test_problem.py  test_pure_neumann.py  test_solution.py  test_solver.py  test_solvers.py  test_spgrid.py  (+3 more)
(+248 files in other folders)
