[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "feax"
authors = [
    {name = "Naruki-Ichihara", email = "ichihara.naruki@gmail.com"},
]
description = "A GPU-accelerated finite element analysis framework with JAX."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["JAX", "CUDA", "Simulation", "PINN"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["my_package"]

[tool.setuptools.dynamic]
version = {attr = "feax.__version__"}