[metadata]
name = feax
version = attr: feax.__version__.__version__
description = A GPU-accelerated finite element analysis framework with JAX.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Naruki-Ichihara
author_email = ichihara.naruki@nihon-u.ac.jp
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
[options]
zip_safe = False
packages = find:
install_requires =
  numpy
  scipy
  matplotlib
  meshio
  nlopt
  pytest
  fenics-basix
  gmsh
  pdoc
